Initial postgres implementation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,15 @@ services:
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  postgres-auth:
+    image: "postgres:alpine"
+    environment:
+      - POSTGRES_PASSWORD=***
+    ports:
+      - "5432:5432"
+    volumes:
+      - "pgdata_auth:/var/lib/postgresql/data"
+    command: ["postgres", "-c", "log_statement=all"]
   account:
     build:
       context: ./account
@@ -28,4 +37,8 @@ services:
       - ENV=dev
     volumes:
       - ./account:/go/src/app
+    depends_on:
+      - postgres-auth
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
+volumes:
+  pgdata_auth:
