Added redis container to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,12 @@ services:
     volumes:
       - "pgdata_account:/var/lib/postgresql/data"
     command: ["postgres", "-c", "log_statement=all"]
+  redis-account:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    volumes:
+      - "redisdata:/data"
   account:
     build:
       context: ./account
@@ -39,6 +45,8 @@ services:
       - ./account:/go/src/app
     depends_on:
       - postgres-account
+      - redis-account
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
 volumes:
   pgdata_account:
+  redisdata:
