--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   postgres-account:
     image: "postgres:alpine"
     environment:
-      - POSTGRES_PASSWORD=***
+      - POSTGRES_PASSWORD=password
     ports:
       - "5432:5432"
     volumes:
