--- a/account-client/package.json
+++ b/account-client/package.json
@@ -6,12 +6,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "axios": "^0.21.1",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
     "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.2",
     "vite": "^2.3.7"
   }
 }
