--- a/account-client/package.json
+++ b/account-client/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "account-client",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -6,14 +7,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.1.20",
     "axios": "^0.21.1",
-    "vue": "^3.0.5",
+    "vee-validate": "^4.4.5",
+    "vue": "^2.6.14",
     "vue-router": "^4.0.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.29.0",
+    "eslint-plugin-vue": "^7.11.1",
     "postcss": "^8.3.5",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.2",
