--- a/account-client/package.json
+++ b/account-client/package.json
@@ -9,13 +9,14 @@
   "dependencies": {
     "@vee-validate/rules": "^4.1.20",
     "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "vee-validate": "^4.4.5",
-    "vue": "^2.6.14",
+    "vue": "^3.1.1",
     "vue-router": "^4.0.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vue/compiler-sfc": "^3.1.1",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.29.0",
     "eslint-plugin-vue": "^7.11.1",
