--- a/account-client/.eslintrc
+++ b/account-client/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["eslint:recommended", "plugin:vue/vue3-essential"],
   "rules": {
     "vue/html-self-closing": "on",
+    "vue/no-multiple-template-root": "off",
     "no-unused-vars": [1, { "args": "all", "argsIgnorePattern": "^_" }]
   }
 }
