--- a/account-client/package.json
+++ b/account-client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vee-validate/rules": "^4.1.20",
     "axios": "^0.21.1",
+    "cropperjs": "^1.5.12",
     "jwt-decode": "^3.1.2",
     "vee-validate": "^4.4.5",
     "vue": "^3.1.1",
