--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,14 @@ services:
       - "5432:5432"
     volumes:
       - "pgdata_account:/var/lib/postgresql/data"
-    command: ["postgres", "-c", "log_statement=all"]
+    command:
+      [
+        "postgres",
+        "-c",
+        "log_statement=mod",
+        "-c",
+        "log_min_error_statement=ERROR",
+      ]
   redis-account:
     image: "redis:alpine"
     ports:
@@ -36,7 +43,14 @@ services:
       - "5433:5432"
     volumes:
       - "pgdata_tasks:/var/lib/postgresql/data"
-    command: ["postgres", "-c", "log_statement=all"]
+    command:
+      [
+        "postgres",
+        "-c",
+        "log_statement=mod",
+        "-c",
+        "log_min_error_statement=ERROR",
+      ]
   account:
     build:
       context: ./account
