Basic initial files for the tasks UI frontend
Signed-off-by: Reece Donovan <reecedonovan99@gmail.com>

--- a/tasks/package.json
+++ b/tasks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-api",
+  "name": "tasks-api",
   "version": "0.0.0",
   "description": "Express application for storing and managing user's upcoming tasks",
   "main": "index.ts",
