--- a/tasks-client/package.json
+++ b/tasks-client/package.json
@@ -1,34 +1,26 @@
 {
   "name": "tasks-client",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.15",
     "@types/jwt-decode": "^3.1.0",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-infinite-scroller": "^1.2.1",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/yup": "^0.29.11",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
-    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
-    "node-sass": "^6.0.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-infinite-scroller": "^1.2.4",
-    "react-query": "^3.17.3",
-    "react-query-devtools": "^2.6.3",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.3",
-    "yup": "^0.32.9",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1",
     "zustand": "^3.5.4"
   },
   "scripts": {
@@ -38,7 +30,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
