--- a/tasks-client/package.json
+++ b/tasks-client/package.json
@@ -12,16 +12,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-query": "^1.2.9",
+    "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.17.3",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
+    "yup": "^0.32.9",
     "zustand": "^3.5.4"
   },
   "scripts": {
