--- a/tasks-client/package.json
+++ b/tasks-client/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-query": "^3.17.3",
     "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.0",
