--- a/tasks-client/package.json
+++ b/tasks-client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-query": "^1.2.9",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
