--- a/tasks-client/package.json
+++ b/tasks-client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-query": "^1.2.9",
+    "@types/react-select": "^4.0.17",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
@@ -27,6 +28,7 @@
     "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9",
