--- a/tasks/package.json
+++ b/tasks/package.json
@@ -1,40 +1,40 @@
 {
   "name": "tasks-api",
   "version": "0.0.0",
-  "description": "Express application for storing and managing user's upcoming tasks",
+  "description": "",
   "main": "index.ts",
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts --watch src"
+    "dev": "nodemon dist/index.js",
+    "dev2": "nodemon --exec ts-node src/index.ts --watch src",
+    "watch": "tsc -w"
   },
-  "keywords": [
-    "node",
-    "typescript",
-    "express",
-    "task",
-    "managment"
-  ],
+  "keywords": [],
   "author": "Reece Donovan",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^14.14.37",
-    "@types/pg": "^8.6.0",
-    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "^2.15.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.6.0",
-    "uuid": "^8.3.2"
+    "@mikro-orm/cli": "^4.5.7",
+    "@mikro-orm/core": "^4.5.7",
+    "@mikro-orm/migrations": "^4.5.7",
+    "@mikro-orm/postgresql": "^4.5.7",
+    "pg": "^8.6.0"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
