--- a/tasks/package.json
+++ b/tasks/package.json
@@ -2,7 +2,7 @@
   "name": "tasks-api",
   "version": "0.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "node dist/index.js",
