--- a/tasks/package.json
+++ b/tasks/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js",
-    "dev2": "nodemon --exec ts-node src/index.ts --watch src",
+    "dev2": "nodemon dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts --watch src",
     "watch": "tsc -w"
   },
   "keywords": [],
   "author": "Reece Donovan",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
@@ -28,7 +29,11 @@
     "@mikro-orm/core": "^4.5.7",
     "@mikro-orm/migrations": "^4.5.7",
     "@mikro-orm/postgresql": "^4.5.7",
-    "pg": "^8.6.0"
+    "apollo-server-express": "^3.0.0",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "pg": "^8.6.0",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
