--- a/tasks/tsconfig.json
+++ b/tasks/tsconfig.json
@@ -22,7 +22,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
-    "strict": true
+    "strict": true,
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
