--- a/tasks-client/.gitignore
+++ b/tasks-client/.gitignore
@@ -1,16 +1,11 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
 
 # misc
-.DS_Store
+.env.dev
 .env.local
 .env.development.local
 .env.test.local
