Adding vite and bulma scss, switching to yarn
Signed-off-by: ReeceDonovan <reecedonovan99@gmail.com>

--- a/tasks-client/tsconfig.json
+++ b/tasks-client/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "baseUrl": ".",
+    // "paths": {
+    //   "@/*": ["src/*"]
+    // },
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
@@ -22,6 +25,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "build",
