--- a/tasks-client/Dockerfile
+++ b/tasks-client/Dockerfile
@@ -1,16 +1,17 @@
 FROM node:lts-alpine
 
-
 # make the 'app' folder the current working directory
 WORKDIR /app
 
 # copy both 'package.json' and 'package-lock.json' (if available)
 COPY package*.json ./
+COPY yarn.lock ./
 
 # install project dependencies
-RUN npm install
+# RUN yarn add
+RUN yarn install
 
 # copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["yarn", "dev"]
