--- a/project-server/package.json
+++ b/project-server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/pubsub": "^2.16.1",
     "class-transformer": "^0.4.0",
+    "dayjs": "^1.10.6",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
@@ -26,6 +27,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "ts-node src/server.ts",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   }
 }
