--- a/project-server/package.json
+++ b/project-server/package.json
@@ -6,6 +6,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.7",
+    "@types/uuid": "^8.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
@@ -22,7 +23,8 @@
     "path": "^0.12.7",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.35"
+    "typeorm": "0.2.35",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "build": "rm -rf dist && tsc",
