--- a/project-server/ormconfig.json
+++ b/project-server/ormconfig.json
@@ -5,7 +5,7 @@
   "username": "postgres",
   "password": "password",
   "database": "calpal_project",
-  "synchronize": true,
+  "synchronize": false,
   "logging": true,
   "entities": ["src/entities/**/*.ts"],
   "migrations": ["src/migrations/**/*.ts"],
