--- a/project-server/tsconfig.json
+++ b/project-server/tsconfig.json
@@ -10,6 +10,7 @@
     "removeComments": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
+    "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
