--- a/project-client/package.json
+++ b/project-client/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "autoprefixer": "^10.3.1",
+    "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "next": "11.0.1",
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "zustand": "^3.5.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "17.0.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
