--- a/project-server/package.json
+++ b/project-server/package.json
@@ -2,6 +2,7 @@
   "name": "project-server",
   "version": "0.0.1",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
@@ -15,6 +16,8 @@
   "dependencies": {
     "@google-cloud/pubsub": "^2.16.1",
     "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.10.6",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
