--- a/project-client/package.json
+++ b/project-client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
     "jwt-decode": "^3.1.2",
     "next": "11.0.1",
     "postcss": "^8.3.6",
