--- a/project-client/package.json
+++ b/project-client/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^0.5.6",
     "tailwindcss": "^2.2.7",
     "zustand": "^3.5.7"
   },
