--- a/project-client/tsconfig.json
+++ b/project-client/tsconfig.json
@@ -7,7 +7,8 @@
     "strict": true,
     "removeComments": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    // "strictNullChecks": true,
+    "strictNullChecks": false,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
