--- a/project-client/package.json
+++ b/project-client/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
     "jwt-decode": "^3.1.2",
     "next": "11.0.1",
     "postcss": "^8.3.6",
     "react": "17.0.2",
+    "react-big-calendar": "^0.33.6",
     "react-dom": "17.0.2",
     "swr": "^0.5.6",
     "tailwindcss": "^2.2.7",
@@ -25,6 +28,7 @@
     "@types/axios": "^0.14.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/react": "17.0.15",
+    "@types/react-big-calendar": "^0.33.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
